# Finanza

./: BankAccount.cpp  BankAccount.h  CMakeLists.txt  IOFile.cpp  IOFile.h  README.md  Transaction.cpp  Transaction.h  main.cpp
test/: BanckAccountTest.cpp  CMakeLists.txt  IOFileTest.cpp  RunAllTest.cpp
